test/e2e/features/backends/testdata/backend.yaml
# this is a separate manifest so it can be applied after the Route is created
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: nginx-static
  namespace: kgateway-base
spec:
  type: Static
  static:
    hosts:
      - host: nginx.nginx-shared.svc # static reference to the shared nginx Service (ns nginx-shared)
        port: 8080
