test/e2e/features/backends/testdata/base.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: nginx-static
          kind: Backend
          group: gateway.kgateway.dev
