test/e2e/features/backends/testdata/backend-error.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: kgateway-base
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  hostnames:
  - "www.example.com"
  rules:
  - matches:
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: example-aws-backend
---
# error no secret
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: example-aws-backend
  namespace: kgateway-base
spec:
  type: AWS
  aws:
    auth:
      type: Secret
      secretRef:
        name: lambda-secret
    lambda:
      accountId: "000000000000"
      functionName: "example-function"
      qualifier: "$LATEST"
