test/e2e/features/backends/testdata/backend-update-error.yaml
apiVersion: v1
kind: Secret
metadata:
  name: lambda-secret
  namespace: kgateway-base
type: Opaque
data:
  # purposefully use unsupported key to surface status update error
  token: c2stdGVzdC1zZWNyZXQK # Base64 encoded "sk-test-secret"
